// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPane hides password link when lock does not have the screen \`forgotPassword\` 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
  </div>
</DocumentFragment>
`;

exports[`LoginPane hides password link when showForgotPasswordLink === false 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
  </div>
</DocumentFragment>
`;

exports[`LoginPane hides password pane when showPassword===false 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`LoginPane renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`LoginPane shows email pane when user usernameStyle === email 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="email_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`LoginPane shows header when instructions is not empty 1`] = `
<DocumentFragment>
  <div>
    <p>
      instructions
    </p>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`LoginPane shows username pane when connectionResolver is specified, even if usernameStyle is email 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`LoginPane shows username pane when user usernameStyle !== email 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`LoginPane shows username pane when user usernameStyle !== email 2`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="username_pane"
    />
    <div
      data-__type="password_pane"
    />
    <p
      class="auth0-lock-alternative"
    >
      <a
        class="auth0-lock-alternative-link"
        href="forgotPasswordLink"
      >
        forgotPasswordAction
      </a>
    </p>
  </div>
</DocumentFragment>
`;
